--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -286,6 +286,9 @@ body {
 .contact-info span {
   font-size: 18px;
   overflow: hidden;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .card-intro {
@@ -402,7 +405,6 @@ body {
   border-radius: 15px;
   background-color: white;
   box-shadow: #898989 0px 5px 10px 0px;
-  text-align: center;
   animation: intro ease 1s;
 }
 
@@ -427,6 +429,9 @@ body {
 
 .list-project ul li {
   list-style-type: none;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .list-project ul li a {
@@ -464,7 +469,11 @@ body {
     padding-left: 0px;
   }
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 880px) {
+  .contents > div {
+    width: 80%;
+  }
+
   .personal-information {
     display: block;
   }
@@ -480,6 +489,23 @@ body {
   .contact {
     padding-top: 30px;
     padding-left: 0px;
+  }
+
+  .list-project {
+    left: 25%;
+    right: 25%;
+  }
+}
+@media screen and (max-width: 710px) {
+  .list-project {
+    left: 15%;
+    right: 15%;
+  }
+
+  .contact {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
 @media screen and (max-width: 567px) {
@@ -514,6 +540,11 @@ body {
   .skills-content .list-skills > div {
     width: 100px;
     height: 100px;
+  }
+
+  .list-project {
+    left: 5%;
+    right: 5%;
   }
 }
 
