--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -516,6 +516,7 @@ body {
   flex: 1;
   display: flex;
   padding-left: 20px;
+  gap: 20px;
 }
 
 .contact-info {
@@ -693,6 +694,12 @@ body {
     transform: translateY(-50%);
   }
 }
+@media screen and (max-width: 1400px) {
+  .contact {
+    flex-direction: column;
+    gap: 0;
+  }
+}
 @media screen and (max-width: 1060px) {
   .personal-information {
     display: block;
@@ -704,11 +711,13 @@ body {
     border-color: #4fb2d6;
     padding-right: 0;
     padding-bottom: 30px;
+    justify-content: center;
   }
 
   .contact {
     padding-top: 30px;
     padding-left: 0px;
+    margin: 0 25% 0 25%;
   }
 }
 @media screen and (max-width: 880px) {
@@ -748,6 +757,7 @@ body {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    margin: 0 20% 0 20%;
   }
 }
 @media screen and (max-width: 567px) {
@@ -770,9 +780,14 @@ body {
   .contact {
     padding-top: 30px;
     display: block;
+    margin: 0 10% 0 10%;
   }
 }
 @media screen and (max-width: 415px) {
+  .contact {
+    margin: 0;
+  }
+
   .skills-content .list-skills {
     flex-direction: column;
     align-items: center;
