--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -323,7 +323,7 @@ body {
 }
 
 .toolbar {
-  width: 20%;
+  width: auto;
   border-radius: 20px;
   position: fixed;
   font-size: 25px;
@@ -347,6 +347,7 @@ body {
   display: inline;
   border-radius: 100rem;
   cursor: pointer;
+  padding: 5px 10px 0 10px;
 }
 
 .toolbar ul li ion-icon {
@@ -541,6 +542,7 @@ body {
 
 .intro-yourself {
   margin: 30px 0 100px 0;
+  padding: 50px 0 50px 0;
 }
 
 .title {
@@ -576,7 +578,8 @@ body {
 }
 
 .my-skills {
-  margin: 30px 0 100px 0;
+  margin: 100px 0 100px 0;
+  padding: 50px 0 50px 0;
 }
 
 .skills-content .list-skills {
@@ -599,7 +602,8 @@ body {
 }
 
 .my-project {
-  margin: 30px 0 100px 0;
+  margin: 100px 0 100px 0;
+  padding: 50px 0 50px 0;
 }
 
 .project-box {
