--- a/sass/css/style.css
+++ b/sass/css/style.css
@@ -535,6 +535,10 @@ body {
   text-overflow: ellipsis;
 }
 
+.contact-info .see {
+  cursor: pointer;
+}
+
 .card-intro {
   margin-top: 30px;
   width: 60%;
